--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@ body{
     /* border: 10px solid black; */
     font-family: 'Indie Flower', cursive;
     color: #dfdfdf;
+    font-size: 30px;
 }
 
 
